--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["jquery-3.5.1-min.js","index.js"]
+      "js": ["jquery-3.5.1-min.js","papaparse.min.js", "index.js"]
     }
   ]
 }
