--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,10 @@
   "manifest_version": 2,
   "name": "GPT conversations to CSV WTF",
   "version": "1.0",
+  "browser_action": {
+    "default_icon": "icon.png",
+    "default_popup": "popup.html"
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
